# OnnxModelDeployment

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yaml  exemple.env  main.py  pyproject.toml  requirements.txt  settings.py
response_models/: __init__.py
reverse_proxy/: Dockerfile  default.conf
utils/: __init__.py  base_model.py  yolov8.py  yolov8_seg.py
