[tool.poetry]
name = "modeldeployment"
version = "0.1.0"
description = ""
authors = ["Gabriel Leite Bessa <gabrielleitebessa@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
onnxruntime = "^1.18.0"
dotenv-python = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
